--- a/samples/pie.html
+++ b/samples/pie.html
@@ -17,7 +17,9 @@
 					value: 300,
 					color:"#F7464A",
 					highlight: "#FF5A5E",
-					label: "Red"
+					label: "Red",
+					labelColor : 'white',
+          labelFontSize : '16'
 				},
 				{
 					value: 50,
